--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,61 +1,5 @@
 .card {
   background-color: white;
-  padding-left: 7rem;
-  padding-right: 7rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  border-radius: 10px;
-  margin: 4rem;
-  transition: 200ms;
-  display: flex;
-  flex-direction: column;
-}
-
-.card:hover {
-  transform: scale(1.05);
-}
-
-.card > h3 {
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-.card > ul {
-  align-self: flex-start;
-  justify-self: flex-start;
-}
-
-.card-link {
-  display: inline-block;
-  margin-top: 1rem;
-  border: 2px solid rgb(101, 88, 211);
-  color: rgb(101, 88, 211);
-  text-align: center;
-  font-weight: 700;
-  border-radius: 5px;
-  transition: 200ms;
-  padding: 0.5rem;
-  margin-right: auto;
-}
-
-.card-link:hover {
-  background-color: rgb(101, 88, 211);
-  color: white;
-}
-
-.image {
-  border-radius: 10px;
-  transition: 200ms;
-}
-
-.image:hover{
-  transform:scale(1.02)
-}
-
-
-
-.new-card{
-  background-color: white;
   width: 18rem;
   height: 28rem;
   border-radius: 10px;
@@ -66,12 +10,12 @@
   color: white;
 }
 
-.new-card > div > img{
+.card > div > img {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.new-card > h3 {
+.card > h3 {
   text-align: center;
   font-size: 1.5rem;
   color: #3f3f3f;
@@ -79,44 +23,41 @@
   margin-top: 0.5rem;
 }
 
-.new-card:hover{
+.card:hover {
   transform: scale(1.03);
 }
 
-.new-card > ul{
-  display:flex;
-  flex-direction: column; 
+.card > ul {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1.8rem;
   font-weight: 700;
 }
 
-
-
-.card-color{
-  background: rgb(252,191,97);
-  background: linear-gradient(41deg, rgba(252,191,97,1) 0%, rgba(255,46,0,1) 100%);
+.card-color {
   border-radius: 10px;
   margin: 5px;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card-resource {
-  background: rgb(252,191,97);
-  background: linear-gradient(41deg, rgba(252,191,97,1) 0%, rgba(255,46,0,1) 100%); 
+.card-link {
   display: block;
-  width: 7rem;
+  width: 8rem;
   height: 1.75rem;
   text-align: center;
-  border-radius: 15px;  
+  border-radius: 15px;
   transition: 250ms;
+  box-shadow: 0px 0px 13px 4px #0808082b;
 }
 
-.card-resource:hover{
-
+.card-link:hover {
+  transform: scale(1.08);
+  box-shadow: 0px 0px 13px 4px #08080855;
 }
 
-
-
+.card-link:active{
+  opacity: 0.8;
+}
