--- a/styles/style.css
+++ b/styles/style.css
@@ -26,24 +26,15 @@ a {
   color: inherit;
 }
 
-
-
 h1{
     text-align: center;
     font-size: 3rem;
     font-weight:800;
-  
-}
-
-hr{
-    height: 0.5px;
-}
-
-footer {
-  text-align: center;
-  margin-bottom: 1rem;
 }
 
 u {
   text-underline-offset: 5px;
+}
+
+y: 0.8;
 }
