--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -21,6 +21,7 @@
 }
 
 .nav-icon{
+    display: inline-block;
     font-family: 'Arial', sans-serif;
     font-size: 1.5rem;
     color: #000000;
@@ -28,12 +29,13 @@
     padding: 0.5rem 1rem;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s, color 0.3s;
+    transition: 300ms;
     font-weight: 700;
 }
 
-.nav-list{
-
+.nav-icon:hover{
+    background-color: #ebebeb;
+    transform: scale(1.04);
 }
 
 .nav-item{
